# ps2pico

./: .gitignore  CMakeLists.txt  README.md  main.c  ps2device.pio  ps2pico.c  ps2pico.uf2  tusb_config.h
src/: at.c  atphy.c  atphy.pio  ps2kbd.c  ps2phy.pio  ps2pico.c  ps2pico.h  tusb_config.h  xt.c  xtalt.pio  xtphy.c  xtphy.pio
